<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jjg.game</groupId>
    <artifactId>slots</artifactId>
    <version>3.1.0-JJG-RELEASES</version>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.2</version>
    </parent>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
        <update.patch>/data/game/slots</update.patch>
        <update.assembly>assembly_all.xml</update.assembly>
    </properties>

    <dependencies>
        <!--        <dependency>
                    <groupId>com.jjg.game</groupId>
                    <artifactId>room</artifactId>
                    <version>1.0.0-JJG-RELEASES</version>
                </dependency>-->

        <dependency>
            <groupId>com.jjg.game</groupId>
            <artifactId>core</artifactId>
            <version>3.1.0-JJG-RELEASES</version>
        </dependency>
        <dependency>
            <groupId>com.jjg.game</groupId>
            <artifactId>activity</artifactId>
            <version>3.1.0-JJG-RELEASES</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>


    <build>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh</artifactId>
                <version>2.8</version>
            </extension>
        </extensions>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <release>21</release>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.8</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>target/lib/</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>
                                false
                            </overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.2-beta-5</version>
                <configuration>
                    <finalName>${project.artifactId}_${project.version}_${maven.build.timestamp}</finalName>
                    <descriptors>
                        <descriptor>${update.assembly}</descriptor>
                    </descriptors>
                    <archive>
                        <manifest>
                            <mainClass>com.jjg.game.slots.SlotsApp</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>wagon-maven-plugin</artifactId>
                <version>1.0</version>
                <configuration>
                    <serverId>innerTest</serverId>
                    <fromFile>target/${project.artifactId}_${project.version}_${maven.build.timestamp}.zip</fromFile>
                    <url>scp://172.18.11.38${update.patch}</url>
                    <commands>
                        <!-- 解压 -->
                        <command>cd ${update.patch};unzip -o
                            ${project.artifactId}_${project.version}_${maven.build.timestamp}.zip -d .
                        </command>
                        <!-- 重启 -->
                        <!--<command>cd ${update.patch};sh ./restart.sh</command>-->
                    </commands>
                    <!-- 显示运行命令的输出结果 -->
                    <displayCommandOutputs>true</displayCommandOutputs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>